remove package-lock and add tsconfig

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The nodejs boilerplate",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [
