--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "The nodejs boilerplate",
   "main": "index.js",
   "scripts": {
+    "dev": "npm run nodemon",
+    "dev_x": "concurrently -k -p \"[{name}]\" -n \"Node\" \"npm run nodemon\"",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config build/index.js",
     "build": "tsc",
+    "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node' src/index.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
   },
   "keywords": [
     "nodejs",
@@ -27,12 +26,17 @@
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "prettier": "^2.3.0",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "concurrently": "^6.1.0",
     "express": "^4.17.1",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
