--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run nodemon",
-    "dev_x": "concurrently -k -p \"[{name}]\" -n \"Node\" \"npm run nodemon\"",
-    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config build/index.js",
+    "start": "export APP_ENV=production; node -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config build/index.js",
     "build": "tsc",
     "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node' src/index.ts",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -23,20 +23,39 @@
   "author": "MrBrown6210",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.5",
+    "@types/glob": "^7.1.3",
+    "@types/jest": "^26.0.23",
+    "@types/mocha": "^8.2.2",
+    "@types/morgan": "^1.9.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
+    "faker": "^5.5.3",
+    "jest": "^26.6.3",
     "prettier": "^2.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "concurrently": "^6.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "glob": "^7.1.7",
+    "helmet": "^4.6.0",
     "husky": "^6.0.0",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.10",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "winston": "^3.3.3",
+    "xss-clean": "^0.1.1"
   }
 }
