--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node' src/index.ts",
     "test": "jest",
     "test:watch": "jest --watchAll",
+    "test:e2e": "jest -c jest.integration.config.js",
+    "test:e2e:watch": "jest -c jest.integration.config.js --watchAll",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -29,8 +31,8 @@
     "@types/faker": "^5.5.5",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
-    "@types/mocha": "^8.2.2",
     "@types/morgan": "^1.9.2",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "dotenv": "^10.0.0",
@@ -38,6 +40,7 @@
     "faker": "^5.5.3",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -50,6 +53,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
     "husky": "^6.0.0",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
