--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "export APP_ENV=production; node -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config build/index.js",
     "build": "tsc",
     "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node' src/index.ts",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "test:e2e": "jest -c jest.integration.config.js",
-    "test:e2e:watch": "jest -c jest.integration.config.js --watchAll",
+    "test": "export APP_ENV=test; jest",
+    "test:watch": "export APP_ENV=test; jest --watchAll",
+    "test:coverage": "export APP_ENV=test; jest --coverage",
+    "test:e2e": "export APP_ENV=test; jest -c jest.integration.config.js",
+    "test:e2e:watch": "export APP_ENV=test; jest -c jest.integration.config.js --watchAll",
+    "test:e2e:coverage": "export APP_ENV=test; jest -c jest.integration.config.js --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
