--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/faker": "^5.5.5",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
+    "@types/mongoose-unique-validator": "^1.0.4",
     "@types/morgan": "^1.9.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
@@ -52,12 +53,14 @@
     "compression": "^1.7.4",
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "husky": "^6.0.0",
     "mongoose": "^5.12.10",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "winston": "^3.3.3",
