--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/faker": "^5.5.5",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/morgan": "^1.9.2",
     "@types/supertest": "^2.0.11",
@@ -59,6 +60,7 @@
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "husky": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
