--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm run nodemon",
     "start": "export APP_ENV=production; node -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config build/index.js",
     "build": "tsc",
-    "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node' src/index.ts",
+    "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node --files' src/index.ts",
     "test": "export APP_ENV=test; jest",
     "test:watch": "export APP_ENV=test; jest --watchAll",
     "test:coverage": "export APP_ENV=test; jest --coverage",
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/morgan": "^1.9.2",
+    "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -62,9 +63,12 @@
     "husky": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "mongoose-private": "^0.1.3",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   }
