--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/morgan": "^1.9.2",
     "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "dotenv": "^10.0.0",
@@ -69,6 +71,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   }
