Add optional authentication routes

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/morgan": "^1.9.2",
+    "@types/passport-anonymous": "^1.0.3",
     "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.0",
@@ -70,6 +71,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
