Add comment to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
-ENVIRONMENT=dev
+# Port number
 APP_PORT=9000
+
+# Prefix app path
 APP_PREFIX_PATH=/
+
+# JWT
+# JWT Secret
 JWT_SECRET=somerandomkeyherena
+# JWT Expire
 JWT_EXPIRE=1y
+
+
+# Database config
+
+# If you want to use database URI with DB_URI
+DB_URI=mongodb://localhost:27017/Mocks
+
+# If you want to use seperate database URI
 #DB_USER=root
 #DB_USER_PWD=secret
 #DB_HOST=localhost
 #DB_NAME=conduit
 #DB_PORT=27017
-DB_URI=mongodb://localhost:27017/Mocks
