--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test:e2e:coverage": "export APP_ENV=test; jest -c jest.integration.config.js --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "prettier": "prettier --check **/*.ts",
-    "prettier:fix": "prettier --write **/*.ts"
+    "prettier": "prettier --check src/**/*.ts",
+    "prettier:fix": "prettier --write src/**/*.ts"
   },
   "keywords": [
     "nodejs",
@@ -48,6 +48,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "faker": "^5.5.3",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
     "supertest": "^6.1.3",
@@ -65,7 +66,6 @@
     "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
-    "husky": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "mongoose-private": "^0.1.3",
