--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "prettier": "prettier --check src/**/*.ts",
-    "prettier:fix": "prettier --write src/**/*.ts"
+    "prettier:fix": "prettier --write src/**/*.ts",
+    "prepare": "husky install"
   },
   "keywords": [
     "nodejs",
