--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ env:
     - PORT=9000
     - MONGODB_URL=mongodb://localhost:27017/node-boilerplate
     - JWT_SECRET=thisisasamplesecret
-    - JWT_ACCESS_EXPIRATION_MINUTES=30
 script:
   - yarn lint
   - yarn test
   - yarn test:e2e
-after_success: yarn coverage
+after_success: yarn test:coverage
