--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ branches:
     - main
 env:
   global:
-    - PORT=9000
-    - MONGODB_URL=mongodb://localhost:27017/node-boilerplate
-    - JWT_SECRET=thisisasamplesecret
+    - APP_PORT=9000
+    - DB_URI=mongodb://localhost:27017/Mocks
+    - JWT_SECRET=somerandomkeyherena
 script:
   - yarn lint
   - yarn test
