--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "nodemon": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' -r ts-node/register/transpile-only -r tsconfig-paths/register -r dotenv/config --exec 'ts-node --files' src/index.ts",
     "test": "export APP_ENV=test; jest",
     "test:watch": "export APP_ENV=test; jest --watchAll",
-    "test:coverage": "export APP_ENV=test; jest --coverage",
+    "coverage": "export APP_ENV=test; jest --coverage",
+    "coverage:coveralls": "export APP_ENV=test; jest -i --coverage --coverageReporters=text-lcov | coveralls",
     "test:e2e": "export APP_ENV=test; jest -c jest.integration.config.js",
     "test:e2e:watch": "export APP_ENV=test; jest -c jest.integration.config.js --watchAll",
     "test:e2e:coverage": "export APP_ENV=test; jest -c jest.integration.config.js --coverage",
@@ -46,6 +47,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "coveralls": "^3.1.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "faker": "^5.5.3",
