Update environment example

--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,5 @@ JWT_EXPIRE=1y
 
 # Database config
 
-# If you want to use database URI with DB_URI
-DB_URI=mongodb://localhost:27017/Mocks
-
-# If you want to use seperate database URI
-#DB_USER=root
-#DB_USER_PWD=secret
-#DB_HOST=localhost
-#DB_NAME=conduit
-#DB_PORT=27017
+DB_SERVER=mongodb://root:example@localhost:27017/
+DB_NAME=core
